--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-spring.application.name=cardatabase
-server.port=8080
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+spring.datasource.username=root
+spring.datasource.password= Sunkanmi123
+
+
  
 
