--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
 spring.datasource.username=root
 spring.datasource.password= Sunkanmi123
+spring.data.rest.basePath=/api
 
 
  
